2007-02-14  Marc Singer  <elf@cerise.buici.com>

	* src/drivers/drv-mem.c (memory_scan): Fixed error in memory scan
	that wasn't accoounting for the last block in a region.  This
	probably would never have been a problem, but was noticed while
	testing the memscan function.
	(cmd_memscan): New command that scans a region of memory as if
	we're scanning memory when APEX starts.  This is useful when
	debugging memory initialization issues.

2007-02-13  Marc Singer  <elf@cerise.buici.com>

	* src/drivers/drv-nor-cfi.c: Added Spansion command support to the
	nor-cfi driver.  This is a configuration time option.  Only one
	command set/protocol may be selected at a time.

2007-02-12  Marc Singer  <elf@zealous.synapsedev.com>

	* src/drivers/drv-nand.c: Augmented NAND driver to allow for both
	Toshiba style command and ST style commands.  The ST stuff is
	incomplete, but reading ought to be OK.

2007-02-05  Marc Singer  <elf@buici.com>

	* Makefile (SUBLEVEL): 1.4.15, allows a wait of 0 for a check for
	^C before continuing.  Mainly done to release to debian.
	
2007-02-05    <elf@baker.buici.com>

	* debian/rules: Dumb typo when I revised the rules.  The name of
	the output file changed and I didn't want it to.

2007-02-02  Marc Singer  <elf@zealous.synapsedev.com>

	* src/apex/cmd-wait.c: Allowing a zero TIMEOUT. 

	* src/apex/command.c (TIMECMD_INIT): Added command execution timer.

2007-01-31  Marc Singer  <elf@cerise.buici.com>

	* debian/rules: Cross-building support.

	* src/mach-ixp42x/serial.c: Minor change to the ixp42x serial
	driver to raise RTS for the same of systems that use it.

2007-01-30  Marc Singer  <elf@buici.com>

	* src/arch-arm/lib/lib1funcs.S: New version of lib1funcs so that
	armel is happy.  This code was pulled directly from the Linux
	kernel source.

2007-01-29  Marc Singer  <elf@cerise.buici.com>

	* Added alternatives to Debian configs.

2007-01-29  Marc Singer  <elf@zealous.synapsedev.com>
