@@ -5,8 +5,8 @@ ENV_CROSS_COMPILE:=$(CROSS_COMPILE)
 
 VERSION = 1
 PATCHLEVEL = 4
-SUBLEVEL = 15
-EXTRAVERSION =a
+SUBLEVEL = 16
+EXTRAVERSION =
 #NAME=Zonked Quokka
 
 # *DOCUMENTATION*
