@@ -1,5 +1,7 @@
 2007-02-14  Marc Singer  <elf@cerise.buici.com>
 
+	* Makefile (SUBLEVEL): 1.4.16.  Rev for fat-slug support.
+
 	* src/drivers/drv-mem.c (memory_scan): Fixed error in memory scan
 	that wasn't accoounting for the last block in a region.  This
 	probably would never have been a problem, but was noticed while
@@ -7,6 +9,9 @@
 	(cmd_memscan): New command that scans a region of memory as if
 	we're scanning memory when APEX starts.  This is useful when
 	debugging memory initialization issues.
+	(cmd_memscan): Added -u switch to memscan so that we can update
+	the memory map passed to the kernel after APEX has made it's pass
+	at initialization time.
 
 2007-02-13  Marc Singer  <elf@cerise.buici.com>
 
